--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "next": "13.5.4",
     "react": "^18",
@@ -17,7 +20,7 @@
   "devDependencies": {
     "@auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^5.4.2",
-    "@types/node": "^20",
+    "@types/node": "^20.8.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
@@ -31,6 +34,7 @@
     "prettier-plugin-tailwindcss": "^0.5.5",
     "prisma": "^5.4.2",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
