--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/lab": "^5.0.0-alpha.150",
+    "@mui/material": "^5.14.15",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-image-gallery": "^1.3.0",
+    "react-material-ui-carousel": "^3.4.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -23,6 +29,7 @@
     "@types/node": "^20.8.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-image-gallery": "^1.2.2",
     "autoprefixer": "^10",
     "daisyui": "^3.9.2",
     "eslint": "^8",
