--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18",
     "react-image-gallery": "^1.3.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-toastify": "^9.1.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
