--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/lab": "^5.0.0-alpha.150",
     "@mui/material": "^5.14.15",
+    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
