--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-image-gallery": "^1.3.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-toastify": "^9.1.3",
     "zod": "^3.22.4"
