--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.14.15",
     "@next-auth/prisma-adapter": "^0.4.4-canary.81",
     "clsx": "^2.0.0",
+    "delay": "^6.0.0",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
