--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-loading-skeleton": "^3.3.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-toastify": "^9.1.3",
+    "stripe": "^14.4.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
