--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@mui/lab": "^5.0.0-alpha.150",
     "@mui/material": "^5.14.15",
     "@next-auth/prisma-adapter": "^0.4.4-canary.81",
+    "@stripe/react-stripe-js": "^2.3.1",
+    "@stripe/stripe-js": "^2.1.11",
+    "axios": "^1.6.1",
     "clsx": "^2.0.0",
     "delay": "^6.0.0",
     "next": "13.5.4",
